# raspi-relay-rest

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  refresh.sh
src/raspi_relay_rest/: __about__.py  __init__.py  __main__.py
tests/: __init__.py
