[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raspi-relay-rest"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Filip Strajnar", email = "filip.strajnar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [ "Flask" ]

[project.urls]
Documentation = "https://github.com/Filip Strajnar/raspi-relay-rest#readme"
Issues = "https://github.com/Filip Strajnar/raspi-relay-rest/issues"
Source = "https://github.com/Filip Strajnar/raspi-relay-rest"

[tool.hatch.version]
path = "src/raspi_relay_rest/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/raspi_relay_rest tests}"

[tool.coverage.run]
source_pkgs = ["raspi_relay_rest", "tests"]
branch = true
parallel = true
omit = [
  "src/raspi_relay_rest/__about__.py",
]

[tool.coverage.paths]
raspi_relay_rest = ["src/raspi_relay_rest", "*/raspi-relay-rest/src/raspi_relay_rest"]
tests = ["tests", "*/raspi-relay-rest/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
